# tdd-django-react-docker

./: .gitignore  Dockerfile  docker-compose.yml  entrypoint.sh  pyproject.toml  pytest.ini
drf_project/: settings.py  urls.py
movies/: admin.py  models.py  serializers.py  urls.py  views.py
movies/migrations/: 0001_initial.py  0002_movies.py  0003_rename_movies_movie.py
tests/: test_foo.py
tests/movies/: conftest.py  test_models.py  test_serializers.py  test_views.py
