[tool.poetry]
name = "django-tdd-docker"
version = "0.1.0"
description = "Tutorial"
authors = ["lorenzo.alvarez <lorenzo.alvarezlorenzo@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
