[tool.poetry]
name = "django-tdd-docker"
version = "0.1.0"
description = "Tutorial"
authors = ["lorenzo.alvarez <lorenzo.alvarezlorenzo@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.6"
djangorestframework = "^3.12.4"
psycopg2-binary = "^2.9.1"
pytest = "^6.2.5"
pytest-django = "^4.4.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
black = {version = "^21.8b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
